# commander

./: .gitignore  BUILD.bazel  BUILD.md  Cargo.toml  README.md  WORKSPACE
.github/workflows/: rust.yml
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.ansi_term-0.11.0.bazel  BUILD.atty-0.2.14.bazel  BUILD.chrono-0.4.19.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.itoa-0.4.8.bazel  BUILD.libc-0.2.102.bazel  BUILD.linked-hash-map-0.5.4.bazel  BUILD.num-integer-0.1.44.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.proc-macro-error-1.0.4.bazel  BUILD.proc-macro-error-attr-1.0.4.bazel  BUILD.proc-macro2-1.0.29.bazel  BUILD.quote-1.0.9.bazel  BUILD.serde-1.0.130.bazel  BUILD.serde_derive-1.0.130.bazel  BUILD.serde_yaml-0.8.21.bazel  BUILD.structopt-0.3.23.bazel  BUILD.structopt-derive-0.4.16.bazel  BUILD.syn-1.0.76.bazel  BUILD.termcolor-1.1.2.bazel  BUILD.time-0.1.44.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-util-0.1.5.bazel  BUILD.yaml-rust-0.4.5.bazel
fixtures/: error.sh  input.json  input.yaml
src/: command_line.rs  main.rs
